2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 
	alerts in alerts view and in main search
	Merged from trunk

P2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 
	alerts in alerts view and in main search

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/events/export_csv.php: Fixed ACLs to avoid
	to export system events to not administrators for bug 
	3053486. Merged from Trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php: Fixed the modules
	combo in the status monitor screen to show only
	the visible agents modules. Merged from trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed the groups combo
	in the networkmaps options to show only visible groups
	merge from trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php: Removed update manager from
	menu for users without PM permissions

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php
	operation/search_graphs.php
	operation/search_alerts.php
	operation/search_reports.php
	operation/search_maps.php
	operation/search_results.php
	operation/search_users.php: Restructured and fixed ACLs
	in the main search merged from trunk

2010-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php: Fixed ACL merged
	from trunk

2010-08-29  Sancho Lerena  <slerena@artica.es>

	* include/pchart_graph.php,
	include/functions_fsgraph.php: Minor (but important) changes on
	graphs: combined wired mode available on flash, improved legends
	on both types, and improved flash wired modes. 

	(Ported from Trunk)

2010-08-26  Sancho Lerena <slerena@artica.es>

    * include/functions_custom_graphs.php: Fixed ACL.
